Closed
Bug 156343
Opened 23 years ago
Closed 23 years ago
[LDAP] address lookup appears to be case sensitive when dir server lookup is enabled
Categories
(MailNews Core :: Security: S/MIME, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
psm2.4
People
(Reporter: carosendahl, Assigned: KaiE)
Details
Attachments
(1 file)
|
936 bytes,
patch
|
javi
:
review+
jag+mozilla
:
superreview+
|
Details | Diff | Splinter Review |
If a directory server is configured for fetching encryption certificates during
mail composition and the recipient name is not identical to the name in the
certificate, it appears that the client is attempting to retrieve the
certificate from the directory server even when the cert exists locally.
example:
Enable directory server lookups on the netscape global directory.
Compose a mail message to JUNruh@netscape.com, encrypt, and send.
Actual behavior:
- If the cert doesn't exist in the local db already, a fetch will be performed
and the cert will be added to the local directory.
- If the cert already exists in the local db (which is the case the second time
around), a fetch is still performed even though it should not be.
The cert contains the email address junruh@netscape.com. Bug 130692 fixed the
case sensitivity issue (i.e. JUNruh@netscape.com vs. junruh@netscape.com) and it
is still fixed.
The problem here is that once a dir server is enabled for lookups, the
case-sensitivity code appears to be out of step with the execution logic.
Expected behavior:
Once the cert exists in the local db, regardless of case, there is no further
need to perform a directory lookup and fetch operation.
| Assignee | ||
Comment 2•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Summary: address lookup appears to be case sensitive when dir server lookup is enabled → [LDAP] address lookup appears to be case sensitive when dir server lookup is enabled
Comment 3•23 years ago
|
||
Comment on attachment 96009 [details] [diff] [review]
Patch v1
r=javi
Attachment #96009 -
Flags: review+
Comment 4•23 years ago
|
||
Comment on attachment 96009 [details] [diff] [review]
Patch v1
sr=jag
Attachment #96009 -
Flags: superreview+
| Assignee | ||
Comment 5•23 years ago
|
||
fixed on trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•23 years ago
|
||
Trunk build 20020904 Windows
Reopening - the browser cannot find any user in the configured directory server.
Directory - nsdirectory.netscape.com
base dn: dc=com
look for junruh@netscape.com or kaie@netscape.com or carosendahl@netscape.com -
none are found. The RTM release with the same profile finds the users.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Reporter | ||
Comment 7•23 years ago
|
||
Changed severity as directory lookup no longer appears to be working at all on
the trunk.
Severity: minor → major
| Assignee | ||
Updated•23 years ago
|
| Reporter | ||
Updated•23 years ago
|
Keywords: regression
| Assignee | ||
Comment 8•23 years ago
|
||
I have looked at the new failure. I'm closing this bug, since the new problem is
caused by something else => bug 172028
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•