b=156343 [LDAP] address lookup appears to be case sensitive when dir server lookup is enabled r=javi sr=jag